WIP: energy class and integration

--- a/doc/tutorials/08_FEM_1d.ipynb
+++ b/doc/tutorials/08_FEM_1d.ipynb
@@ -436,7 +436,7 @@
    "id": "12",
    "metadata": {},
    "source": [
-    "Required for the temperature diffusion term:\n",
+    "Illustrated using the temperature diffusion term (the only term that requires this):\n",
     "\n",
     "$$\n",
     "R = \\frac{\\partial^2 T}{\\partial x^2} = \\frac{\\partial}{\\partial x} \\frac{\\partial T}{\\partial x}\n",
@@ -526,6 +526,8 @@
     "$$\n",
     "M_{i, i+1, \\text{right}, \\rho} = - \\left( -1, \\frac{+1}{\\Delta x_{\\text{left}}} \\left( \\frac{\\partial T}{\\partial \\rho} \\right) \\right)\n",
     "$$\n",
+    "\n",
+    "Note that this is only for $\\rho$ and has to be repeated for the partial derivative contributions of $j_x$ and $E$.\n",
     "\n",
     "Implementation: The residual term is treated similar to the first spatial derivative. Simply test function values are changed from zeroth-order value to first derivative value."
    ]
@@ -690,7 +692,7 @@
    "id": "25",
    "metadata": {},
    "source": [
-    "The whole equation looks like this. For explanation of individual terms see below.\n",
+    "The whole equation looks like this. Note that temperature $T$ is a function of all three conserved quantities $\\rho, j_x, E$.\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -727,17 +729,11 @@
     "- **R31**: Energy advection + height source term\n",
     "- **R32**: Pressure Work + height source term\n",
     "- **R33**: Shear work $xx$ + height source term\n",
-    "- **R34**: Shear work $xz$: work done by wall movement\n",
+    "- **R34**: Wall shear work $xz$: work done by wall movement\n",
     "- **R35**: Thermal diffusion\n",
     "- **R36**: Wall heat balance\n",
     "- **R37**: Height change over time"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
