WIP: first energy use case running

--- a/GaPFlow/fem/test.ipynb
+++ b/GaPFlow/fem/test.ipynb
@@ -51,7 +51,7 @@
     "    max_iter: 15\n",
     "    alpha: 1.0\n",
     "    equations:\n",
-    "        term_list: ['R11', 'R12', 'R21', 'R24']\n",
+    "        term_list: ['R11', 'R11S', 'R21', 'R24']\n",
     "\"\"\"\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
@@ -112,12 +112,23 @@
     "    alpha: 1.0\n",
     "    R_norm_tol: 1e-04\n",
     "    equations:\n",
-    "        term_list: ['R11', 'R12', 'R21', 'R24', 'R1T', 'R2T']\n",
+    "        term_list: ['R11', 'R11S', 'R21', 'R24', 'R1T', 'R2T']\n",
     "\"\"\"\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
     "problem.run()\n",
     "problem.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shear wall heating\n",
+    "\n"
    ]
   }
  ],
