WIP: included energ and temperature in problem plot and anim 1d

--- a/doc/tutorials/08_FEM1d_theory.ipynb
+++ b/doc/tutorials/08_FEM1d_theory.ipynb
@@ -75,9 +75,9 @@
     "\\int_{x_{n-1}}^{x_{n+1}} \\varphi_n(x) \\, R(x) \\mathrm{d}x = (\\varphi_n, R) = 0 \\quad \\forall n \\in 0, ..., N_{\\mathrm{pt}}\n",
     "$$\n",
     "\n",
-    "For linear residual terms, closed-form expressions can be found for the integral but for non-linear terms we fall back to Gaussian quadrature for approximation.\n",
+    "For linear residual terms, closed-form expressions could be found for the integral but for non-linear terms we need to use Gaussian quadrature for approximation.\n",
     "\n",
-    "Note that we can use Gaussian quadrature also for linear terms obtaining the exact result.\n",
+    "Note that we can use Gaussian quadrature also for linear terms obtaining the exact result, which is why this solver consistently uses Gaussian quadrature for all terms.\n",
     "\n",
     "$$\n",
     "\\int_{-1}^{1} f(x)\\,\\mathrm{d}x \\approx \\sum_{i=1}^{n_{\\mathrm{quad}}} \\omega_i\\,f(x_{\\mathrm{quad},i})\n",
