--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -284,10 +284,7 @@
     "        energy: True\n",
     "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R34', 'R3T']\n",
     "energy_spec:\n",
-    "    k: 0.0263\n",
     "    cv: 1005.\n",
-    "    T_wall: 300.0\n",
-    "    alpha_wall: 1.\n",
     "\"\"\"\n",
     "import numpy as np\n",
     "\n",
@@ -303,10 +300,17 @@
     "problem = Problem.from_string(sim)\n",
     "problem.solver.num_solver.callback_fun = compute_means\n",
     "problem.run()\n",
-    "problem.plot()\n",
-    "\n",
-    "print(\"\\nMean energy history:\", np.array2string(np.array(E_mean_history), precision=2))\n",
-    "print(\"\\nMean temperature history:\", np.array2string(np.array(T_mean_history), precision=2))"
+    "problem.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.animate()"
    ]
   }
  ],
