DOC: small fixes

--- a/doc/tutorials/08_FEM1d_theory.ipynb
+++ b/doc/tutorials/08_FEM1d_theory.ipynb
@@ -610,7 +610,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "0 &= \n",
-    "-\\,\\frac{\\partial \\left(\\overline{\\rho} - \\overline{\\rho}_{\\mathrm{prev}}\\right)}{\\partial t} \\\\[4pt]\n",
+    "-\\,\\frac{\\partial \\left(\\overline{\\rho} - \\overline{\\rho}_{\\mathrm{prev}}\\right)}{\\Delta  t} \\\\[4pt]\n",
     "&\\quad\n",
     "-\\,\\frac{\\partial \\overline{j_x}}{\\partial x}\n",
     "- \\frac{1}{h}\\,\\frac{\\partial h}{\\partial x}\\,\\overline{j_x} \\\\[4pt]\n",
@@ -648,7 +648,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "0 &= \n",
-    "- \\frac{\\partial (\\overline{j_x})}{\\partial t} \\\\[2pt]\n",
+    "- \\frac{\\partial (\\overline{j_x})}{\\Delta  t} \\\\[2pt]\n",
     "&\\quad\n",
     "- \\frac{\\partial p}{\\partial x} \\\\[2pt]\n",
     "&\\quad\n",
@@ -697,7 +697,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "0 &= \n",
-    "-\\,\\frac{\\partial \\left(\\overline{E} - \\overline{E}_{\\text{prev}}\\right)}{\\partial t} \\\\[6pt]\n",
+    "-\\,\\frac{\\partial \\left(\\overline{E} - \\overline{E}_{\\text{prev}}\\right)}{\\Delta t} \\\\[6pt]\n",
     "&\\quad\n",
     "-\\,\\frac{\\partial (\\overline{E u})}{\\partial x}\n",
     "- \\overline{E u}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial x} \\\\[6pt]\n",
