--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -45,6 +45,7 @@
    "outputs": [],
    "source": [
     "# non-periodic boundary conditions and steady-state; inclined slider use case\n",
+    "%matplotlib inline\n",
     "from GaPFlow import Problem\n",
     "\n",
     "sim = \"\"\"\n",
@@ -145,6 +146,7 @@
    "outputs": [],
    "source": [
     "# periodic boundary conditions and time-stepping; journal use case\n",
+    "%matplotlib inline\n",
     "from GaPFlow import Problem\n",
     "\n",
     "sim = \"\"\"\n",
@@ -226,7 +228,7 @@
     "['R34', 'R3T']\n",
     "```\n",
     "\n",
-    "Relevant for this case is also the volume-specific heat capacity $c_v$, that determines the temperature increase.\n",
+    "Relevant for this case is also the volume-specific heat capacity $c_v$, which determines the temperature increase.\n",
     "\n",
     "```yaml\n",
     "energy_spec:\n",
@@ -242,6 +244,7 @@
    "outputs": [],
    "source": [
     "# shear wall heating\n",
+    "%matplotlib inline\n",
     "from GaPFlow import Problem\n",
     "\n",
     "sim = \"\"\"\n",
