ENH: FEM restructuring, added temperature profile and wall heat flux

--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -210,7 +210,7 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "#### Shear Wall Heating"
+    "#### Energy - Shear Heat"
    ]
   },
   {
@@ -297,7 +297,7 @@
     "def compute_means(args):\n",
     "    E_mean = np.mean(problem.energy.energy)\n",
     "    E_mean_history.append(E_mean)\n",
-    "    T_mean = np.mean(problem.energy.T_quad(2))\n",
+    "    T_mean = np.mean(problem.energy.temperature)\n",
     "    T_mean_history.append(T_mean)\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
@@ -314,6 +314,346 @@
    "outputs": [],
    "source": [
     "problem.animate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "#### Energy - Wall Heat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "Dynamic simulation of heat diffusion from a hot fluid into cold walls using the Robin boundary condition (`Tz_Robin` wall model).\n",
+    "\n",
+    "Setup:\n",
+    "- Periodic boundary conditions (uniform in x)\n",
+    "- No wall movement (U=0, V=0)\n",
+    "- Constant channel height\n",
+    "- Initial fluid temperature: 400 K\n",
+    "- Wall temperature: 300 K\n",
+    "\n",
+    "The Robin boundary condition models heat flux at the wall interface:\n",
+    "\n",
+    "```yaml\n",
+    "energy_spec:\n",
+    "    wall_flux_model: Tz_Robin\n",
+    "    T_wall: 300.\n",
+    "    h_Robin: 1e4\n",
+    "    k: 0.026\n",
+    "    cv: 1005.\n",
+    "```\n",
+    "\n",
+    "This use case tracks the evolution of the temperature profile T(z) across the channel height using a callback function. The `get_T_z` function from `GaPFlow.models.heatflux` computes the parabolic temperature profile based on the current state variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wall heat diffusion with T(z) tracking\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "from GaPFlow.models.heatflux import get_T_z\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/wall_heat\n",
+    "    write_freq: 5\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    dx: 1.e-5\n",
+    "    dy: 1.\n",
+    "    Nx: 10\n",
+    "    Ny: 1\n",
+    "    xE: ['P', 'P', 'P']\n",
+    "    xW: ['P', 'P', 'P']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-3\n",
+    "    hmin: 1.0e-3\n",
+    "    U: 0.\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: 1e-4\n",
+    "    max_it: 100\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: 1.1853\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-4\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R36', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: 1005.\n",
+    "    k: 0.026\n",
+    "    wall_flux_model: Tz_Robin\n",
+    "    T_wall: 300.\n",
+    "    h_Robin: 1e-4\n",
+    "\"\"\"\n",
+    "\n",
+    "# T(z) history storage\n",
+    "T_z_history = {'iteration': [], 'T_z': [], 'z': None}\n",
+    "\n",
+    "def track_T_z(args):\n",
+    "    \"\"\"Callback to track T(z) profile evolution.\"\"\"\n",
+    "    # Get parameters for T(z) calculation\n",
+    "    p = problem\n",
+    "    \n",
+    "    # Use first interior cell (all cells should have same T(z) profile)\n",
+    "    i, j = 1, 1\n",
+    "    h = p.topo.h[i, j]\n",
+    "    h_eff = p.energy.h_Robin\n",
+    "    k = p.energy.k\n",
+    "    cv = p.energy.cv\n",
+    "    eta = p.prop['shear']  # constant viscosity from properties dict\n",
+    "    rho = p.q[0, i, j]\n",
+    "    E = p.energy.energy[i, j]\n",
+    "    jx = p.q[1, i, j]\n",
+    "    jy = p.q[2, i, j]\n",
+    "    U = p.geo['U']\n",
+    "    V = p.geo['V']\n",
+    "    Tb_top = p.energy.Tb_top[i, j]\n",
+    "    Tb_bot = p.energy.Tb_bot[i, j]\n",
+    "    \n",
+    "    # Define z positions if not already done\n",
+    "    if T_z_history['z'] is None:\n",
+    "        T_z_history['z'] = np.linspace(0, h, 21)\n",
+    "    \n",
+    "    z = T_z_history['z']\n",
+    "    \n",
+    "    # Calculate T(z) profile\n",
+    "    T_z = get_T_z(h, h_eff, k, cv, eta, rho, E, jx, jy, U, V, Tb_top, Tb_bot, z)\n",
+    "    \n",
+    "    # Store results (use iteration count)\n",
+    "    T_z_history['iteration'].append(len(T_z_history['T_z']))\n",
+    "    T_z_history['T_z'].append(T_z.copy())\n",
+    "\n",
+    "# Initialize problem\n",
+    "problem = Problem.from_string(sim)\n",
+    "\n",
+    "# Set initial temperature to 400 K (through energy)\n",
+    "T_init = 400.0\n",
+    "rho_init = problem.q[0, :, :]\n",
+    "jx_init = problem.q[1, :, :]\n",
+    "jy_init = problem.q[2, :, :]\n",
+    "E_init = T_init * rho_init * problem.energy.cv + 0.5 * (jx_init**2 + jy_init**2) / rho_init\n",
+    "problem.energy.energy[:] = E_init\n",
+    "\n",
+    "# Set callback\n",
+    "problem.solver.num_solver.callback_fun = track_T_z\n",
+    "\n",
+    "# Run simulation\n",
+    "problem.run()\n",
+    "problem.animate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot T(z) evolution\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "\n",
+    "z = T_z_history['z']\n",
+    "iterations = T_z_history['iteration']\n",
+    "T_z_data = T_z_history['T_z']\n",
+    "dt = problem.numerics['dt']\n",
+    "\n",
+    "# Plot every nth profile to avoid clutter\n",
+    "n_profiles = min(10, len(T_z_data))\n",
+    "indices = np.linspace(0, len(T_z_data) - 1, n_profiles, dtype=int)\n",
+    "\n",
+    "colors = plt.cm.coolwarm(np.linspace(0, 1, n_profiles))\n",
+    "\n",
+    "for i, idx in enumerate(indices):\n",
+    "    time = iterations[idx] * dt\n",
+    "    ax.plot(T_z_data[idx], z * 1e6, color=colors[i], label=f't = {time:.2e} s')\n",
+    "\n",
+    "ax.axvline(x=300, color='k', linestyle='--', alpha=0.5, label='T_wall = 300 K')\n",
+    "ax.set_xlabel('Temperature [K]')\n",
+    "ax.set_ylabel('z [μm]')\n",
+    "ax.set_title('Temperature Profile T(z) Evolution')\n",
+    "ax.legend(loc='best', fontsize=8)\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "#### Energy - Shear and Wall\n",
+    "\n",
+    "Dynamic simulation combining shear heating from wall motion with heat transfer to the walls using the Robin boundary condition.\n",
+    "\n",
+    "Setup:\n",
+    "- Periodic boundary conditions (Couette flow)\n",
+    "- Wall movement: U > 0 (shear heating source)\n",
+    "- Constant channel height\n",
+    "- Initial fluid temperature: 290 K (cold fluid)\n",
+    "- Wall temperature: 300 K (warm walls)\n",
+    "\n",
+    "This demonstrates the balance between:\n",
+    "1. **Shear heating (R34)**: Energy input from viscous dissipation due to wall motion\n",
+    "2. **Wall heat flux (R36)**: Energy exchange with the walls via Robin BC\n",
+    "\n",
+    "The system should reach a thermal equilibrium where shear heating balances the heat flux to the walls. With the initial fluid colder than the walls, we expect:\n",
+    "- Initial heating from both shear work and wall heat transfer\n",
+    "- As fluid heats up past wall temperature, wall heat flux reverses direction\n",
+    "- Final equilibrium temperature above wall temperature (due to shear heating)\n",
+    "\n",
+    "```yaml\n",
+    "fem_solver:\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R34', 'R36', 'R3T']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shear heating with wall heat transfer - equilibrium demonstration\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/shear_wall\n",
+    "    write_freq: 5\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    dx: 1.e-5\n",
+    "    dy: 1.\n",
+    "    Nx: 10\n",
+    "    Ny: 1\n",
+    "    xE: ['P', 'P', 'P']\n",
+    "    xW: ['P', 'P', 'P']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-3\n",
+    "    hmin: 1.0e-3\n",
+    "    U: 50.\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: 1e-3\n",
+    "    max_it: 100\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: 1.1853\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-4\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R34', 'R36', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: 1005.\n",
+    "    k: 0.026\n",
+    "    wall_flux_model: Tz_Robin\n",
+    "    T_wall: 300.\n",
+    "    h_Robin: 1e-4\n",
+    "\"\"\"\n",
+    "\n",
+    "# Temperature history storage\n",
+    "T_history = {'iteration': [], 'T_mean': [], 'T_min': [], 'T_max': []}\n",
+    "\n",
+    "def track_temperature(args):\n",
+    "    \"\"\"Callback to track temperature evolution.\"\"\"\n",
+    "    T = problem.energy.temperature\n",
+    "    T_history['iteration'].append(len(T_history['T_mean']))\n",
+    "    T_history['T_mean'].append(np.mean(T[1:-1,1:-1]))\n",
+    "    T_history['T_min'].append(np.min(T[1:-1,1:-1]))\n",
+    "    T_history['T_max'].append(np.max(T[1:-1,1:-1]))\n",
+    "\n",
+    "# Initialize problem\n",
+    "problem = Problem.from_string(sim)\n",
+    "\n",
+    "# Set initial temperature to 290 K (cold fluid, walls at 300 K)\n",
+    "T_init = 290.0\n",
+    "rho_init = problem.q[0, :, :]\n",
+    "jx_init = problem.q[1, :, :]\n",
+    "jy_init = problem.q[2, :, :]\n",
+    "E_init = T_init * rho_init * problem.energy.cv + 0.5 * (jx_init**2 + jy_init**2) / rho_init\n",
+    "problem.energy.energy[:] = E_init\n",
+    "\n",
+    "# Set callback\n",
+    "problem.solver.num_solver.callback_fun = track_temperature\n",
+    "\n",
+    "# Run simulation\n",
+    "problem.run()\n",
+    "problem.animate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot temperature evolution to equilibrium\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(5, 3))\n",
+    "\n",
+    "iterations = np.array(T_history['iteration'])\n",
+    "T_mean = np.array(T_history['T_mean'])\n",
+    "dt = problem.numerics['dt']\n",
+    "time = iterations * dt\n",
+    "\n",
+    "ax.plot(time, T_mean, 'b-', linewidth=2, label='T_fluid average')\n",
+    "ax.axhline(y=300, color='r', linestyle='--', linewidth=1.5, label='T_wall = 300 K')\n",
+    "ax.axhline(y=T_init, color='g', linestyle=':', linewidth=1.5, label=f'T_init = {T_init} K')\n",
+    "\n",
+    "ax.set_xlabel('Time [s]')\n",
+    "ax.set_ylabel('Temperature [K]')\n",
+    "ax.set_title('Temperature Evolution: Shear Heating vs Wall Heat Transfer')\n",
+    "ax.legend(loc='best')\n",
+    "ax.grid(False)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
