--- a/doc/tutorials/08_FEM1d_theory.ipynb
+++ b/doc/tutorials/08_FEM1d_theory.ipynb
@@ -734,6 +734,111 @@
     "- **R36**: Wall heat balance\n",
     "- **R37**: Height change over time"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "## Implementation Overview\n",
+    "\n",
+    "This section provides a brief overview of the FEM solver implementation in `solver_fem.py`, focusing on the data structures and computational flow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28",
+   "metadata": {},
+   "source": [
+    "### Centralized Quadrature Field Management\n",
+    "\n",
+    "The FEM solver uses **centralized quadrature field storage** in the `FEMSolver1D` class. All field values at quadrature points are stored in a single dictionary:\n",
+    "\n",
+    "```python\n",
+    "self.quad_fields: Dict[Tuple[str, int], Field] = {}\n",
+    "```\n",
+    "\n",
+    "Each key is a tuple `(field_name, nb_quad)` where:\n",
+    "- `field_name`: Name of the field (e.g., `'rho'`, `'p'`, `'tau_xz'`)\n",
+    "- `nb_quad`: Number of quadrature points per element\n",
+    "\n",
+    "The field data has shape `(nb_quad, nb_elements)`, where each column contains the values at all quadrature points within one element."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "### Field Categories\n",
+    "\n",
+    "The quadrature fields are organized into categories:\n",
+    "\n",
+    "| Category | Examples | Source |\n",
+    "|----------|----------|--------|\n",
+    "| **Nodal fields** | `rho`, `jx`, `jy`,  `E`, `p`, `h`, `hx`, `hy` | Interpolated from nodal grid values |\n",
+    "| **Constant fields** | `U`, `V`, `Ls` | Constant values (geometry, properties) |\n",
+    "| **Computed fields** | `dp_drho`, `tau_xz`, `dtau_xz_drho`, ... | Computed from other quad fields via JIT functions |\n",
+    "| **Previous timestep** | `rho_prev`, `jx_prev`, ... | Stored for dynamic simulations |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30",
+   "metadata": {},
+   "source": [
+    "### Update Procedure\n",
+    "\n",
+    "Each Newton iteration follows a three-step update procedure:\n",
+    "\n",
+    "**Step 1: update_nodal_fields()**\n",
+    "- Update pressure\n",
+    "- Update topography (elastic deformation)\n",
+    "- Update temperature and wall heat flow (if energy enabled)\n",
+    "\n",
+    "**Step 2: update_quad_nodal()**\n",
+    "- Interpolate nodal values to quadrature points\n",
+    "- Fill constant fields (U, V, Ls)\n",
+    "\n",
+    "**Step 3: update_quad_computed()**\n",
+    "- Compute derived quantities (mostly gradients) at quad points\n",
+    "- Ready to assemble matrix!\n",
+    "\n",
+    "This procedure is wrapped in `update_quad()`, which calls all three steps sequentially."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
+    "### Key Methods\n",
+    "\n",
+    "| Method | Purpose |\n",
+    "|--------|---------|\n",
+    "| `get_quad(name, nb_quad)` | Access quadrature field data by name and quad count |\n",
+    "| `update_quad()` | Full quadrature update (calls steps 1-3 above) |\n",
+    "| `update_prev_quad()` | Store current values as previous timestep (dynamic mode) |\n",
+    "| `get_M()` | Assemble and return tangent matrix |\n",
+    "| `get_R()` | Assemble and return residual vector |\n",
+    "| `solver_step_fun(q_guess)` | Single Newton step: set q → update quad → return (M, R) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32",
+   "metadata": {},
+   "source": [
+    "### JIT-Compiled Functions\n",
+    "\n",
+    "The solver uses JAX for automatic differentiation and JIT compilation of physical model functions. These are built during `pre_run()`:\n",
+    "\n",
+    "- **Pressure model**: `dp_drho(rho)` — gradient of equation of state\n",
+    "- **Wall stress model**: `tau_xz(rho, jx, jy, h, hx, U, V, Ls)` and its gradients\n",
+    "- **Energy model**: `T(rho, jx, jy, E)` and gradients, `q_wall_sum` for heat flux and its gradients\n",
+    "\n",
+    "All functions are vectorized with `vmap` to operate on arrays of quadrature points efficiently."
+   ]
   }
  ],
  "metadata": {
