ENH: several clean-ups, get_T_z helper, print_header fix

--- a/doc/tutorials/08_FEM1d_theory.ipynb
+++ b/doc/tutorials/08_FEM1d_theory.ipynb
@@ -747,12 +747,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "### Field Categories\n",
+    "\n",
+    "The relevant data fields are organized like this:\n",
+    "\n",
+    "| Category | Examples | Source |\n",
+    "|----------|----------|--------|\n",
+    "| **Nodal fields** | `rho`, `jx`, `jy`,  `E`, `p`, `h`, `hx`, `hy` (`eta`) | Nodal grid values |\n",
+    "| **Constant fields** | `U`, `V`, `Ls` | Constant values |\n",
+    "| **Computed fields** | `dp_drho`, `tau_xz`, `dtau_xz_drho`, ... | Computed via JIT functions |\n",
+    "| **Previous timestep** | `rho_prev`, `jx_prev`, ... | Stored for dynamic simulations |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "28",
    "metadata": {},
    "source": [
-    "### Centralized Quadrature Field Management\n",
+    "### Quadrature Fields\n",
     "\n",
-    "The FEM solver uses **centralized quadrature field storage** in the `FEMSolver1D` class. All field values at quadrature points are stored in a single dictionary:\n",
+    "For FEM, we need these field values at quadrature points. Note that the number of quadrature points is term-specific, i.e. several quadrature fields may be required for one variable. A centralized quadrature field storage is implemented in the `FEMSolver1D` class. The quadrature fields themselves live in a muGrid FieldCollection. But for easy access, the references to all quadrature fields are stored in a single dictionary:\n",
     "\n",
     "```python\n",
     "self.quad_fields: Dict[Tuple[str, int], Field] = {}\n",
@@ -763,23 +780,6 @@
     "- `nb_quad`: Number of quadrature points per element\n",
     "\n",
     "The field data has shape `(nb_quad, nb_elements)`, where each column contains the values at all quadrature points within one element."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29",
-   "metadata": {},
-   "source": [
-    "### Field Categories\n",
-    "\n",
-    "The quadrature fields are organized into categories:\n",
-    "\n",
-    "| Category | Examples | Source |\n",
-    "|----------|----------|--------|\n",
-    "| **Nodal fields** | `rho`, `jx`, `jy`,  `E`, `p`, `h`, `hx`, `hy` | Interpolated from nodal grid values |\n",
-    "| **Constant fields** | `U`, `V`, `Ls` | Constant values (geometry, properties) |\n",
-    "| **Computed fields** | `dp_drho`, `tau_xz`, `dtau_xz_drho`, ... | Computed from other quad fields via JIT functions |\n",
-    "| **Previous timestep** | `rho_prev`, `jx_prev`, ... | Stored for dynamic simulations |"
    ]
   },
   {
@@ -841,11 +841,7 @@
    ]
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
