--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -303,16 +303,6 @@
     "problem = Problem.from_string(sim)\n",
     "problem.solver.num_solver.callback_fun = compute_means\n",
     "problem.run()\n",
-    "problem.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "problem.animate()"
    ]
   },
@@ -363,7 +353,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "from GaPFlow import Problem\n",
-    "from GaPFlow.models.heatflux import get_T_z\n",
+    "from GaPFlow.models.heatflux import get_T_z_at_cell\n",
     "\n",
     "sim = \"\"\"\n",
     "options:\n",
@@ -409,58 +399,24 @@
     "    k: 0.026\n",
     "    wall_flux_model: Tz_Robin\n",
     "    T_wall: 300.\n",
+    "    T0: 400.\n",
     "    h_Robin: 1e-4\n",
     "\"\"\"\n",
-    "\n",
-    "# T(z) history storage\n",
-    "T_z_history = {'iteration': [], 'T_z': [], 'z': None}\n",
-    "\n",
-    "def track_T_z(args):\n",
-    "    \"\"\"Callback to track T(z) profile evolution.\"\"\"\n",
-    "    # Get parameters for T(z) calculation\n",
-    "    p = problem\n",
-    "    \n",
-    "    # Use first interior cell (all cells should have same T(z) profile)\n",
-    "    i, j = 1, 1\n",
-    "    h = p.topo.h[i, j]\n",
-    "    h_eff = p.energy.h_Robin\n",
-    "    k = p.energy.k\n",
-    "    cv = p.energy.cv\n",
-    "    eta = p.prop['shear']  # constant viscosity from properties dict\n",
-    "    rho = p.q[0, i, j]\n",
-    "    E = p.energy.energy[i, j]\n",
-    "    jx = p.q[1, i, j]\n",
-    "    jy = p.q[2, i, j]\n",
-    "    U = p.geo['U']\n",
-    "    V = p.geo['V']\n",
-    "    Tb_top = p.energy.Tb_top[i, j]\n",
-    "    Tb_bot = p.energy.Tb_bot[i, j]\n",
-    "    \n",
-    "    # Define z positions if not already done\n",
-    "    if T_z_history['z'] is None:\n",
-    "        T_z_history['z'] = np.linspace(0, h, 21)\n",
-    "    \n",
-    "    z = T_z_history['z']\n",
-    "    \n",
-    "    # Calculate T(z) profile\n",
-    "    T_z = get_T_z(h, h_eff, k, cv, eta, rho, E, jx, jy, U, V, Tb_top, Tb_bot, z)\n",
-    "    \n",
-    "    # Store results (use iteration count)\n",
-    "    T_z_history['iteration'].append(len(T_z_history['T_z']))\n",
-    "    T_z_history['T_z'].append(T_z.copy())\n",
     "\n",
     "# Initialize problem\n",
     "problem = Problem.from_string(sim)\n",
     "\n",
-    "# Set initial temperature to 400 K (through energy)\n",
-    "T_init = 400.0\n",
-    "rho_init = problem.q[0, :, :]\n",
-    "jx_init = problem.q[1, :, :]\n",
-    "jy_init = problem.q[2, :, :]\n",
-    "E_init = T_init * rho_init * problem.energy.cv + 0.5 * (jx_init**2 + jy_init**2) / rho_init\n",
-    "problem.energy.energy[:] = E_init\n",
+    "# Track T(z) profile via callback\n",
+    "i, j = 1, 1\n",
+    "z = np.linspace(0, problem.topo.h[i, j], 21)\n",
+    "T_z_history = {'iteration': [], 'T_z': []}\n",
     "\n",
-    "# Set callback\n",
+    "def track_T_z(args):\n",
+    "    \"\"\"Callback to track T(z) profile evolution.\"\"\"\n",
+    "    T_z = get_T_z_at_cell(problem, i, j, z)\n",
+    "    T_z_history['iteration'].append(len(T_z_history['T_z']))\n",
+    "    T_z_history['T_z'].append(T_z.copy())\n",
+    "\n",
     "problem.solver.num_solver.callback_fun = track_T_z\n",
     "\n",
     "# Run simulation\n",
@@ -480,7 +436,6 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "\n",
-    "z = T_z_history['z']\n",
     "iterations = T_z_history['iteration']\n",
     "T_z_data = T_z_history['T_z']\n",
     "dt = problem.numerics['dt']\n",
@@ -489,7 +444,7 @@
     "n_profiles = min(10, len(T_z_data))\n",
     "indices = np.linspace(0, len(T_z_data) - 1, n_profiles, dtype=int)\n",
     "\n",
-    "colors = plt.cm.coolwarm(np.linspace(0, 1, n_profiles))\n",
+    "colors = plt.cm.coolwarm(np.linspace(1, 0, n_profiles))\n",
     "\n",
     "for i, idx in enumerate(indices):\n",
     "    time = iterations[idx] * dt\n",
@@ -593,32 +548,22 @@
     "    k: 0.026\n",
     "    wall_flux_model: Tz_Robin\n",
     "    T_wall: 300.\n",
+    "    T0: 290.\n",
     "    h_Robin: 1e-4\n",
     "\"\"\"\n",
     "\n",
-    "# Temperature history storage\n",
-    "T_history = {'iteration': [], 'T_mean': [], 'T_min': [], 'T_max': []}\n",
+    "# Initialize problem\n",
+    "problem = Problem.from_string(sim)\n",
+    "\n",
+    "# Track temperature history via callback\n",
+    "T_history = {'iteration': [], 'T_mean': []}\n",
     "\n",
     "def track_temperature(args):\n",
     "    \"\"\"Callback to track temperature evolution.\"\"\"\n",
     "    T = problem.energy.temperature\n",
     "    T_history['iteration'].append(len(T_history['T_mean']))\n",
     "    T_history['T_mean'].append(np.mean(T[1:-1,1:-1]))\n",
-    "    T_history['T_min'].append(np.min(T[1:-1,1:-1]))\n",
-    "    T_history['T_max'].append(np.max(T[1:-1,1:-1]))\n",
     "\n",
-    "# Initialize problem\n",
-    "problem = Problem.from_string(sim)\n",
-    "\n",
-    "# Set initial temperature to 290 K (cold fluid, walls at 300 K)\n",
-    "T_init = 290.0\n",
-    "rho_init = problem.q[0, :, :]\n",
-    "jx_init = problem.q[1, :, :]\n",
-    "jy_init = problem.q[2, :, :]\n",
-    "E_init = T_init * rho_init * problem.energy.cv + 0.5 * (jx_init**2 + jy_init**2) / rho_init\n",
-    "problem.energy.energy[:] = E_init\n",
-    "\n",
-    "# Set callback\n",
     "problem.solver.num_solver.callback_fun = track_temperature\n",
     "\n",
     "# Run simulation\n",
@@ -640,42 +585,114 @@
     "\n",
     "iterations = np.array(T_history['iteration'])\n",
     "T_mean = np.array(T_history['T_mean'])\n",
+    "T_init = problem.energy_spec['T0'][1]\n",
     "dt = problem.numerics['dt']\n",
     "time = iterations * dt\n",
     "\n",
-    "ax.plot(time, T_mean, 'b-', linewidth=2, label='T_fluid average')\n",
-    "ax.axhline(y=300, color='r', linestyle='--', linewidth=1.5, label='T_wall = 300 K')\n",
-    "ax.axhline(y=T_init, color='g', linestyle=':', linewidth=1.5, label=f'T_init = {T_init} K')\n",
+    "ax.plot(time, T_mean, 'b-', linewidth=1.5, label='T_fluid average')\n",
+    "ax.axhline(y=300, color='r', linestyle='--', linewidth=1., label='T_wall = 300 K')\n",
+    "ax.axhline(y=T_init, color='g', linestyle='--', linewidth=1., label=f'T_init = {T_init} K')\n",
     "\n",
     "ax.set_xlabel('Time [s]')\n",
     "ax.set_ylabel('Temperature [K]')\n",
-    "ax.set_title('Temperature Evolution: Shear Heating vs Wall Heat Transfer')\n",
+    "ax.set_title('Balance of Shear Heating vs Wall Heat Transfer')\n",
     "ax.legend(loc='best')\n",
     "ax.grid(False)\n",
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "264hljiaia8",
+   "metadata": {},
+   "source": [
+    "#### Energy - Cooling\n",
+    "\n",
+    "Dynamic simulation of a 'cooling rod' with non-periodic boundary conditions.\n",
+    "\n",
+    "Initial and boundary conditions for temperature can be specified as follows:\n",
+    "\n",
+    "```yaml\n",
+    "energy_spec:\n",
+    "    T0: [half_sine, 300, 400]\n",
+    "    bc_xW: D\n",
+    "    bc_xE: D\n",
+    "    T_bc_xW: 300.\n",
+    "    T_bc_xE: 300.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48unzghtaiz",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cooling rod with non-periodic BC and half-sine initial temperature\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/cooling\n",
+    "    write_freq: 5\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    Lx: 0.1\n",
+    "    Ly: 1.\n",
+    "    Nx: 50\n",
+    "    Ny: 1\n",
+    "    xE: ['D', 'N', 'N']\n",
+    "    xW: ['D', 'N', 'N']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "    xE_D: 1.1853\n",
+    "    xW_D: 1.1853\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-3\n",
+    "    hmin: 1.0e-3\n",
+    "    U: 0.\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: 5e-01\n",
+    "    max_it: 100\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: 1.1853\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-7\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R35', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: 1005.\n",
+    "    k: 0.026\n",
+    "    T0: [half_sine, 300, 400]\n",
+    "    bc_xW: D\n",
+    "    bc_xE: D\n",
+    "    T_bc_xW: 300.\n",
+    "    T_bc_xE: 300.\n",
+    "\"\"\"\n",
+    "\n",
+    "problem = Problem.from_string(sim)\n",
+    "problem.run()\n",
+    "problem.animate()"
+   ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "GaPFlow",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
