DOC: fix plot command in notebook

--- a/doc/tutorials/06_GP.ipynb
+++ b/doc/tutorials/06_GP.ipynb
@@ -347,6 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03338613-5760-4532-9a42-81482b305943",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "19",
    "metadata": {},
    "outputs": [],
@@ -363,7 +371,7 @@
     "                        shear_predict[0][0],\n",
     "                        shear_predict[0][1],\n",
     "                        press_predict[1],\n",
-    "                        shear_predict[1][0],\n",
+    "                        shear_predict[1],\n",
     "                        myProblem.pressure.variance_tol,\n",
     "                        myProblem.wall_stress_xz.variance_tol,\n",
     "                        ax=ax)"
