WIP: First draft PETSc assembly running

--- a/doc/tutorials/07_elastic_deformation.ipynb
+++ b/doc/tutorials/07_elastic_deformation.ipynb
@@ -559,6 +559,16 @@
    "source": [
     "Note here, as discussed in `Implementation Notes`, that at the left boundary, the deformed shape is fixed to the initial shape (meaning the effective deformation is set to zero here). With no fixing, the deformation would be positive for the whole domain and the whole slider would be pressed upwards."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a66bf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myProblem.animate()"
+   ]
   }
  ],
  "metadata": {},
